# pico-i2c-lcd1602

./: Cargo.toml  Embed.toml  README.md
src/: main.rs
