[package]
name = "pico_from_scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "=0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
fugit = "0.3.7"
hd44780-driver = "0.4.0"
lcd1602-diver = "0.1.1"
panic-halt = "1.0.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.11.0"
rtt-target = {version = "0.6.1", features = ["defmt"]}

[target.thumbv6m-none-eabi]
runner = "probe-run --chip RP2040"

[[bin]]
name = "pico_from_scratch"
path = "src/main.rs"
